--- a/requirements.txt
+++ b/requirements.txt
@@ -60,3 +60,9 @@ fleep==1.0.1
 apscheduler==3.10.4
 tzdata==2023.3
 tzlocal==5.0.1
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.3.0
+pytest==7.4.2
+tomli==2.0.1
+pytest-asyncio==0.21.1
