[FEAT] 상대 변수로 파일 위치 관리하도록 수정, config 프로필 적용

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea
 data.db
-.env
+env/.env
 send_test.py
 
 # Byte-compiled / optimized / DLL files
@@ -125,9 +125,9 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+env/.env.local
+env/.env.production
 .venv
-env/
 venv/
 ENV/
 env.bak/
