--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,7 @@ pluggy==1.3.0
 pytest==7.4.2
 tomli==2.0.1
 pytest-asyncio==0.21.1
+Mako==1.2.4
+MarkupSafe==2.1.3
+alembic==1.12.0
+pytest-mock==3.11.1
