--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:fastapi]
-command=python /app/app.py
+command=gunicorn --workers 4 --bind 127.0.0.1:8000 main:app
 autostart=true
 autorestart=true
 stdout_logfile=/dev/fd/1
@@ -9,7 +9,7 @@ logfile_backups=0
 logfile_maxbytes=0
 
 [program:scheduler]
-command=python /app/run_scheduler.py
+command=python ./run_scheduler.py
 autostart=true
 autorestart=true
 stdout_logfile=/dev/fd/1
