[CHORE] pytest 실행 구문 수정,gunicorn 실행 구문 수정

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [program:fastapi]
-command=gunicorn --workers 4 --bind 127.0.0.1:8000 main:app
+command=python -m gunicorn --workers 4 --bind 127.0.0.1:8000 main:app
 autostart=true
 autorestart=true
 stdout_logfile=/dev/fd/1
