--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,3 +1,6 @@
+[supervisord]
+nodaemon=true
+
 [program:fastapi]
 command=python -m gunicorn --workers 4 --bind 127.0.0.1:8000 main:app
 autostart=true
